# sentinel

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mydata.parquet  rules.yaml
.github/workflows/: ci.yml
examples/: data.csv
src/: main.rs  output.rs  rules.rs  runner.rs  storage.rs
