[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
datafusion = "43"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
comfy-table = "7"
anyhow = "1"

