[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Spollal"]
description = "Data quality validation CLI for CSV and Parquet files"
license = "MIT"
repository = "https://github.com/Spollal/sentinel"
keywords = ["data-quality", "validation", "cli", "csv", "parquet"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
datafusion = "43"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
comfy-table = "7"
anyhow = "1"
object_store = { version = "0.11", features = ["azure"] }
url = "2"

[dev-dependencies]
azure_storage = "0.20"
azure_storage_blobs = "0.20"

